@@ -13,6 +13,7 @@ Coccinella-0.96.4 (2007????)
  o drag-and-drop files to roster items
  o drag-and-drop roster items to desktop or other applications as text/plain
  o xml console
+ o spell checking
 
 
 Coccinella-0.96.2 (20070919)
